# heart-failure-ds-showcase

./: .cursorignore  .cursorrules  .editorconfig  .env.mcp.example  .gitignore  .rules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.ai/: AGENT_CONTRACT.md  PROJECT_STRUCTURE.md  STRUCTURE_CHECKLIST.md  commands.ai.md  decisions.md  rules.md  skills.md  subagents.md  task_state.md
.ai/prompts/: coding.md  docs.md  review.md  system.md
.cursor/: mcp.json
.cursor/plans/: README.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_report.md
.github/agents/: azure-devops-workflow.agent.md  jira-workflow.agent.md  security-reviewer.agent.md  swe-implementer.agent.md  task-planner.agent.md  terraform-iac-reviewer.agent.md
.github/workflows/: ci.yml  security.yml
docs/: Agent_Models_Recommendation.md  Architecture.md  BoardTasks.md  Cursor_Context.md  GitHubFlow.md  GitHub_References.md  IDE_Context_Matrix.md  MCP_Jira_Azure_Setup.md  PRD.md  Productivity_CI_Playbook.md  PyCharm.md  Roadmap.md  TEMPLATE_USAGE.md  VibeCodingAgent.md
infra/ci/: README.md  docker-compose.mcp.yml  setup-project.ps1
infra/terraform/: main.tf
tests/integration/: test_selenium_smoke.py
